# spotify-api-examples

./: .env.example  .gitignore  Makefile  PIPELINE.md  README.md  docker-compose.yaml  dvc.yaml  params.yaml  pyproject.toml  requirements_lastrun.txt
data/interim/: .gitignore
data/raw/: .gitignore  favorite_artists.txt.dvc
spotify_api_examples/: __init__.py  dataset.py  features.py  plots.py  upload_data_to_surrealdb.py  visualize.py  web_api_example.py
spotify_api_examples/modeling/: predict.py  train.py
