[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spotify_api_examples"
version = "0.0.1"
description = "Spotify API examples"
authors = [
  { name = "u-masao" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["spotify_api_examples"]
force_sort_within_sections = true

[tool.poetry]
name = "spotify-api-examples"
version = "0.1.0"
description = "Spotify API examples"
authors = ["u-masao"]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.24.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.8.0"
dvc = "^3.53.2"

